# gv-engine

./: README.md  pyproject.toml
examples/: experiment_01_baseline.py  run_experiment.py  simple_trajectory.py
src/gv_engine/: __init__.py  core.py  coupling.py
tests/: test_core.py
