[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gv-engine"
version = "0.1.0"
description = "Core constraint-based engine for computing GV-style scalar strain and coupling metrics."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Will Shacklett" }
]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
